# CircuitClaude

./: .gitignore  CLAUDE.md  README.md  agents.md  index.html  notes.md  package-lock.json  package.json  system.md
.design/: bash-tool-styles.html
.github/workflows/: release.yml
mockups/: 01-warm-cozy.html  02-modern-ide.html  03-neo-brutalist.html  04-linear.html  05-arc-raycast.html  index.html  redesigns.html  redesigns2.html  styles.html  tui-styles.html
mockups/layout/: a-tree.html  b-sessions-first.html  c-attention-queue.html  d-top-deck.html  index.html
scripts/: copy-cuda-dlls.cjs  kill-port.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: claude-bridge.mjs
src-tauri/src/: claude_manager.rs  claude_title.rs  codex_title.rs  commands.rs  config.rs  conversation.rs  file_watcher.rs  git.rs  lib.rs  main.rs  pi_manager.rs  pty_manager.rs  whisper_manager.rs
src/components/: AddProjectDialog.tsx  BottomTerminal.tsx  ClaudeMdEditor.tsx  CommandPalette.tsx  CommitDialog.tsx  CompanionPanel.tsx  ConversationView.tsx  DiffViewer.tsx  EditorView.tsx  EmptyState.tsx  FileTreeView.tsx  FilesPanel.tsx  GitPanel.tsx  GitSection.tsx  NewSessionMenu.tsx  NotesEditor.tsx  NotesPanel.tsx  PiChatBlocks.tsx  PiChatView.css  PiChatView.tsx  PinsDropdown.tsx  PinsPanel.tsx  ProjectHeader.tsx  RightPanel.tsx  SegmentedControl.tsx  SessionLauncher.tsx  SessionStatusBar.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarSessions.tsx  SlashCommandMenu.tsx  StatusBar.tsx  StatusPill.tsx  (+6 more)
(+45 files in other folders)
