[package]
name = "circuitclaude"
version = "0.3.5"
description = "Claude Code terminal session manager"
authors = ["CircuitLord"]
edition = "2021"

[lib]
name = "circuitclaude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda"]

[dependencies]
tauri = { version = "~2.9", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = "0.4"
whisper-rs = "0.15"
reqwest = { version = "0.12", features = ["blocking"] }
ignore = "0.4"
notify-debouncer-mini = "0.4"
zip = "2"
